# py-sys-viewer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
domain/dto/: hardware.py  sensor.py
helpers/: constants.py
src/: main.py
src/common/: constants.py
src/common/helpers/: logging.py
src/domain/dto/: __init__.py  hardware.py  sensor.py
src/domain/use_case/: get_hardware_data.py
src/infrastructure/adapter/libremonitor/: __init__.py  hardware_adapter.py  ilibremonitor.py  sensor_adapter.py
src/infrastructure/repositories/: hardware_monitor_repository.py
src/presenters/cli/: cli_app.py
src/presenters/cli/css/: cli_app.css
