[tool.poetry]
name = "py-sys-viewer"
version = "0.0.1"
description = "A python system information viewer"
authors = ["Anor Neto <anornetoo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_sys_viewer"}]

[tool.poetry.dependencies]
python = "^3.11"
psutil = "^5.9.4"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
bandit = "^1.7.4"
pytest = "^7.2.1"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
